--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "youtubeAPI": "AIzaSyD5542J5XdJhGnkMCLAj_OvS5H0xI0OS9c",
-  "forcedlogs": "static-logs",
-  "geniusLyricsAPI": "gCCKOAlxuEpuyyS0MoXMhp0w6pwhRJaMnjuWpXmUmwy6wZ7ACHHsMa6Al_35H4YK"
+  "youtubeAPI": "YOUTUBE API KEY HERE",
+  "forcedlogs": "LOGS CHANNEL NAME HERE",
+  "geniusLyricsAPI": "GENIUS LYRICS API KEY HERE"
 }
