--- a/config.json
+++ b/config.json
@@ -1,9 +1,8 @@
 {
-  "youtubeAPI": "AIzaSyD5542J5XdJhGnkMCLAj_OvS5H0xI0OS9c",
-  "forcedlogs": "radifasf",
-  "geniusLyricsAPI": "QPZCbXKflxz-NLmBCyJCYbKPnavR5qdKoq8aDOIrqfnQQtIqq5zTZpC_Awm9cixC",
-  "prefix": "ic-",
-  "owner": "630817206145646602",
-  "supportserver": "https://invite.gg/apolloisland",
-  "token": "NzA4OTAyMjc4ODM2NTE4OTcz.XsgD1A._4uBO3pyA7OGg5WuEZdC85biYek"
+  "youtubeAPI": "YOUTUBE TOKEN HERE",
+  "geniusLyricsAPI": "GENIUS API KEY HERE",
+  "prefix": "PREFIX HERE",
+  "owner": "OWNER ID HERE",
+  "supportserver": "SUPPORT SERVER INVITE HERE",
+  "token": "DISCORD BOT TOKEN HERE"
 }
