--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "crystelian-dev",
+  "name": "static-operator",
   "version": "1.0.0",
-  "description": "Crystelian Development",
+  "description": "StaticOS Operator.",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -41,7 +41,8 @@
     "sqlite3": "^4.2.0",
     "urban": "^0.3.2",
     "youtube-info": "^1.3.2",
-    "ytdl-core": "^2.1.4"
+    "ytdl-core": "^2.1.4",
+    "moment": "^2.26.0"
   },
   "engines": {
     "node": "12"
