--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -16,6 +16,7 @@ dependencies:
   get-youtube-id: 1.0.1
   keyv: 4.0.1
   leet: 1.3.0
+  moment: 2.26.0
   ms: 2.1.2
   node-fetch: 2.6.0
   node-gyp: 6.1.0
@@ -2982,6 +2983,7 @@ specifiers:
   get-youtube-id: ^1.0.1
   keyv: ^4.0.1
   leet: ^1.3.0
+  moment: ^2.26.0
   ms: ^2.1.2
   node-fetch: ^2.6.0
   node-gyp: ^6.1.0
