--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "StaticOS Operator.",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "node .",
     "start": "node ."
@@ -15,34 +14,33 @@
     "@keyv/mongo": "^1.0.4",
     "@keyv/sqlite": "^2.0.2",
     "ascii-art": "^2.5.0",
-    "ascii-table": "0.0.9",
     "beautify": "0.0.8",
-    "chalk": "^4.0.0",
+    "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
     "common-tags": "^1.8.0",
     "discord.js": "github:discordjs/discord.js",
     "discord.js-commando": "github:discordjs/Commando",
     "dotenv": "^8.2.0",
     "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^4.2.2",
+    "ffmpeg-static": "^4.2.3",
     "get-youtube-id": "^1.0.1",
     "keyv": "^4.0.1",
     "leet": "^1.3.0",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.0",
-    "node-gyp": "^6.1.0",
+    "node-gyp": "^7.0.0",
     "opusscript": "^0.0.7",
     "parse-ms": "^2.0.0",
     "quick.db": "7.1.1",
     "random-puppy": "^1.1.0",
     "sequelize": "^5.0.0",
     "simple-youtube-api": "^5.2.1",
-    "sqlite": "3.0.0",
+    "sqlite": "^3.0.0",
     "sqlite3": "^4.2.0",
     "urban": "^0.3.2",
     "youtube-info": "^1.3.2",
-    "ytdl-core": "^2.1.4",
-    "moment": "^2.26.0"
+    "ytdl-core": "^3.1.1",
+    "moment": "^2.27.0"
   },
   "engines": {
     "node": "12"
